chore: add manifests

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,13 +6,13 @@ on:
   workflow_call:
   push:
     tags:
-      - 'v*'
+      - "v*"
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  IMAGE_NAME: zeiss/natz-operator
+  IMAGE_NAME: zeiss/openfga-operator
   REGISTRY: ghcr.io
-      
+
 jobs:
   test:
     permissions:
@@ -56,8 +56,7 @@ jobs:
           DIST_DIR: /tmp/dist
         if: success()
       - run: |
-          go run internal/updater/main.go --file helm/charts/natz-operator/Chart.yaml --version ${{ env.RELEASE_VERSION }}
-          go run internal/updater/main.go --file helm/charts/account-server/Chart.yaml --version ${{ env.RELEASE_VERSION }}
+          go run internal/updater/main.go --file helm/charts/openfga-operator/Chart.yaml --version ${{ env.RELEASE_VERSION }}
       - uses: azure/setup-helm@v4
         with:
           version: v3.11.2
