--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,8 @@
     "ghcr.io/devcontainers/features/docker-in-docker:2": {},
     "ghcr.io/devcontainers/features/go:1": {},
     "ghcr.io/devcontainers/features/kubectl-helm-minikube:1": {},
-    "ghcr.io/dhoeric/features/k9s:1": {}
+    "ghcr.io/dhoeric/features/k9s:1": {},
+    "ghcr.io/rio/features/kustomize:1": {}
   },
   "hostRequirements": {
     "cpus": 8,
