--- a/examples/deployment.yaml
+++ b/examples/deployment.yaml
@@ -5,9 +5,9 @@ metadata:
   labels:
     app: nginx
   annotations:
-    openfga.zeiss.com/model: "demo1"
+    openfga.zeiss.com/model.ref: demo1
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       app: nginx
@@ -17,7 +17,7 @@ spec:
         app: nginx
     spec:
       containers:
-      - name: nginx
-        image: nginx:1.14.2
-        ports:
-        - containerPort: 80
+        - name: nginx
+          image: nginx:1.14.2
+          ports:
+            - containerPort: 80
